# metricLib

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
.github/workflows/: static.yml
examples/: CMakeLists.txt  example_1.cpp
include/: metricsLib.hpp
src/: metricsLib.cpp
test/: CMakeLists.txt  metricsTests.cpp
tests/: CMakeLists.txt  metricsTests.cpp
